# perceptron-cpp

./: .gitignore  BTCUSDT.csv  CMakeLists.txt  Perceptron.h  data.csv  main.cpp  model.json  perceptron  traindata.csv  writematrix.h
include/: Perceptron.h  TrainData.h  TrainingParams.h  defs.h  writematrix.h
mymodel/: model.json
new-model/: Makefile  cmake_install.cmake  model.json  new-model
new-model/model.json.model/: model.json
new-model/src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
predict_btc/src/: CMakeLists.txt  main.cpp
sin_example/: Makefile  cmake_install.cmake  example  model.json  training.json
sin_example/src/: CMakeLists.txt  Makefile  cmake_install.cmake  sin_example.cpp
train-btc/: model.json  train-btc  traindata.csv  training.json
train-btc/model/: model.json
train-btc/src/: CMakeLists.txt  main.cpp
